fixed white space on cart page

--- a/main-style.css
+++ b/main-style.css
@@ -253,6 +253,9 @@ a {
         visibility: visible;
         position: inherit;
     }
+    .uhoh{
+        margin-bottom:90%;
+    }
 }
 
 /*--------------------------------------------------------------------------------Responsive condition css---------------------------------------------------------------------------------*/
@@ -344,6 +347,13 @@ footer {
     padding-top: 0.4%;
     padding-bottom: 0.4%;
     text-align: center;
+}
+.uhoh{
+    text-align:center;
+}
+uhoh h2, uhoh h3{
+    display:inline-block;
+    position:relative;
 }
 
 /*--------------------------------------------------------------------------------CAROUSEL--------------------------------------------------------------------------------*/
@@ -478,6 +488,8 @@ footer {
     transition: background-color 100ms, color 300ms;
 }
 
+
+/*--------------------------------------------------------------------------------Cart Page--------------------------------------------------------------------------------*/
 .cart-icon {
     padding: 2%;
     border: 2px solid black;
